Fix overflow on loaded site because side scroller was showing.

--- a/_/css/less/global.less
+++ b/_/css/less/global.less
@@ -52,7 +52,7 @@ min-height: 100%;
 	&.loaded {
 	overflow-y: auto;
 	overflow-x: hidden;	
-		@media screen and (min-width: 1200px){
+		@media screen and (max-width: 1100px){
 		overflow-x: auto;	
 		}
 	}
