--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -5561,7 +5561,7 @@ body.loaded {
   overflow-y: auto;
   overflow-x: hidden;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1100px) {
   body.loaded {
     overflow-x: auto;
   }
